fixed issue with generated keys